Shenzhou Localization File

--- a/ShenZhou/Part/HeatShield.cfg
+++ b/ShenZhou/Part/HeatShield.cfg
@@ -19,9 +19,10 @@
 	cost = 1100
 	category = Thermal
 	subcategory = 0
-	title = ShenZhou Heat Shield
-	manufacturer = Icecovery
-	description = ShenZhou Heat Shield
+	title = #ICSP_SZ_DockingPort_title // Shenzhou Heat Shield
+	manufacturer = #CNSA
+	description = #ICSP_SZ_DockingPort_description // The Heat Shield protects the Re-entry capsule during the flamy re-entry. It is jettisoned after the main chute deployment to expose the retro-rocket. Note: The heat shield on Shenzhou is only rated for LEO re-entry!
+	tags = #ICSP_SZ_DockingPort_tags // Shenzhou thermal re-entry
 	attachRules = 1,0,1,0,0
 	mass = 0.15
 	dragModelType = default
