--- a/ShenZhou/Part/MainParachute.cfg
+++ b/ShenZhou/Part/MainParachute.cfg
@@ -37,9 +37,10 @@ PART
 	cost = 0
 	category = Utility
 	subcategory = 0
-	title = ShenZhou Main Parachute
-	manufacturer = Icecovery
-	description = ShenZhou Main Parachute
+	title = #ICSP_SZ_MainParachute_title // ShenZhou Main Parachute System
+	manufacturer = #CNSA
+	description = #ICSP_SZ_MainParachute_description // The main chute system on the Shenzhou Re-entry Capsule is used during standard landing. The Drogue chute slows down the capsule enough so it can then deploy the main chute. Note: RealChute is required for this part to function properly. 
+	tags = #ICSP_SZ_MainParachute_tags // Shenzhou chute re-entry
 	attachRules = 1,0,0,1,0
 	mass = 0.05
 	maximum_drag = 0.32
