--- a/ShenZhou/Part/OrbitalModule.cfg
+++ b/ShenZhou/Part/OrbitalModule.cfg
@@ -14,9 +14,10 @@
 	cost = 3800
 	category = Utility
 	subcategory = 0
-	title = ShenZhou Orbital Module
-	manufacturer = Icecovery
-	description = ShenZhou Orbital Module
+	title = #ICSP_SZ_OrbitalModule_title // ShenZhou Orbital Module
+	manufacturer = #CNSA
+	description = #ICSP_SZ_OrbitalModule_description // The Shenzhou spacecraft's orbital module is a cylinder with a total length of 2.8 meters and a maximum diameter of 2.27 meters. One end is connected to the Re-entry Capsule while the other connected to the docking mechanism. The OM is where the astronauts spend all of their time in space except during Launch, Landing or Docking. The OM also serves as an air-lock to allow astronauts to go on EVAs. The OM is jettisoned before re-entry.
+	tags = #ICSP_SZ_OrbitalModule_tags // Shenzhou Orbital
 	attachRules = 1,0,1,1,0
 	mass = 1.1
 	
