--- a/ShenZhou/Part/Re_entryModule.cfg
+++ b/ShenZhou/Part/Re_entryModule.cfg
@@ -20,9 +20,10 @@
 	cost = 3800
 	category = Pods
 	subcategory = 0
-	title = ShenZhou Re-entry Module
-	manufacturer = Icecovery
-	description = ShenZhou Re-entry Module
+	title = #ICSP_SZ_OrbitalModule_title // ShenZhou Re-entry Capsule
+	manufacturer = #CNSA
+	description = #ICSP_SZ_OrbitalModule_description // The Re-entry Capsule is occupied by astronuats during launch, landing and docking. It is protected by the Heat Shield during re-entry. After the flamy re-entry, it is slowed down by the drogue parachute, followed by the main parachute. At one meter above the ground, the retro-rocket is fired to give a soft landing(This process is best executed by Comfortable Landing). In the event of a water landing, a airbag is deployed to help the capsule afloat. 
+	tags = #ICSP_SZ_OrbitalModule_tags // Shenzhou re-entry
 	attachRules = 1,0,1,1,0
 	mass = 2.3
 	
