--- a/ShenZhou/Part/SpareParachute.cfg
+++ b/ShenZhou/Part/SpareParachute.cfg
@@ -37,9 +37,10 @@ PART
 	cost = 0
 	category = Utility
 	subcategory = 0
-	title = ShenZhou Spare Parachute
-	manufacturer = Icecovery
-	description = ShenZhou Spare Parachute
+	title = #ICSP_SZ_SpareParachute_title // ShenZhou Backup Parachute System
+	manufacturer = #CNSA
+	description = #ICSP_SZ_SpareParachute_description // The backup chute system on the Shenzhou Re-entry Capsule is used in the event of an abort or main parachute failure. The Drogue chute slows down the capsule enough so it can then deploy the main chute. Note: RealChute is required for this part to function properly. 
+	tags = #ICSP_SZ_SpareParachute_tags // Shenzhou chute re-entry backup
 	attachRules = 1,0,0,1,0
 	mass = 0.05
 	maximum_drag = 0.32
@@ -70,14 +71,14 @@ PART
 			parachuteName = RC_canopy
 			preDeploymentAnimation = RC_chute_semi_deploy
 			deploymentAnimation = RC_chute_full_deploy
-			preDeployedDiameter = 3
-			deployedDiameter = 50
+			preDeployedDiameter = 1.5
+			deployedDiameter = 30
 			minIsPressure = false
-			minDeployment = 1950
-			deploymentAlt = 1500
+			minDeployment = 1250
+			deploymentAlt = 700
 			cutAlt = -1
-			preDeploymentSpeed = 2
-			deploymentSpeed = 6
+			preDeploymentSpeed = 1
+			deploymentSpeed = 3
 		}
 		
 		// Drogue chute
