--- a/ShenZhou/Part/DockingPort.cfg
+++ b/ShenZhou/Part/DockingPort.cfg
@@ -17,9 +17,10 @@
 	cost = 280
 	category = Coupling
 	subcategory = 0
-	title = ShenZhou Docking Port
-	manufacturer = Icecovery
-	description = ShenZhou Docking Port
+	title = #ICSP_SZ_DockingPort_title // Shenzhou Docking Port
+	manufacturer = #CNSA
+	description = #ICSP_SZ_DockingPort_description // Shenzhou Docking Port is used to connect Shenzhou with Tiangong Station. It is compatible with Tiangong Docking Port and Chinsese Universal Docking Port.
+	tags = #ICSP_SZ_DockingPort_tags // Shenzhou Docking
 	attachRules = 1,1,1,1,0
 	mass = 0.08
 	dragModelType = default
@@ -30,20 +31,7 @@
 	maxTemp = 1500
 	bulkheadProfiles = size1, srf
 	stagingIcon = DECOUPLER_VERT
-	// NODE
-    // {
-        // name = top
-        // transform = node_Top
-        // size = 2
-        // method = FIXED_JOINT
-    // }
-	// NODE
-    // {
-        // name = bottom
-        // transform = node_Bottom
-        // size = 2
-        // method = FIXED_JOINT
-    // }
+
 	MODULE
 	{
 		name = ModuleDockingNode
