--- a/ShenZhou/Part/RM_CMUmblilcal.cfg
+++ b/ShenZhou/Part/RM_CMUmblilcal.cfg
@@ -18,9 +18,10 @@
 	cost = 900
 	category = Coupling
 	subcategory = 0
-	title = ShenZhou RM/CM Umblilcal
-	manufacturer = Icecovery
-	description = ShenZhou RM/CM Umblilcal
+	title = #ICSP_SZ_RM_CMUmblilcale_title // ShenZhou RC/SM Umblilcal
+	manufacturer = #CNSA
+	description = #ICSP_SZ_RM_CMUmblilcal_description // The Umblilcal line connects the Re-entry Capsule and the Service module to transfer Electricity and resources. It also acts as a separator to detach the RC and SM.
+	tags = #ICSP_SZ_RM_CMUmblilcal_tags // Shenzhou re-entry service Coupling
 	attachRules = 1,0,1,1,0
 	mass = 0.01
 	dragModelType = default
