--- a/ShenZhou/Part/ServiceModule.cfg
+++ b/ShenZhou/Part/ServiceModule.cfg
@@ -18,9 +18,10 @@
 	cost = 1300
 	category = Control
 	subcategory = 0
-	title = ShenZhou Service Module
-	manufacturer = Icecovery
-	description = ShenZhou Service Module
+	title = #ICSP_SZ_ServiceModule_title // ShenZhou Service Module
+	manufacturer = #CNSA
+	description = #ICSP_SZ_ServiceModule_description // The Service Module, also known as the Instrument Module or Equipment Module, is used to install the Propulsion system, Electrical system and Attitude Control System. It also provides oxygen and water to the astronauts. Inside it are the engines and propellants of the propulsion system, which provide the power needed to adjust the attitude and orbit of the spacecraft.
+	tags = #ICSP_SZ_ServiceModule_tags // Shenzhou Service
 	attachRules = 1,1,1,1,0
 	mass = 1.7
 	dragModelType = default
