--- a/ShenZhou/Part/SolarPanel_long.cfg
+++ b/ShenZhou/Part/SolarPanel_long.cfg
@@ -15,9 +15,10 @@
 	cost = 380
 	category = Electrical
 	subcategory = 0
-	title = ShenZhou Service Module SolarPanel
-	manufacturer = Icecovery
-	description = ShenZhou Service Module SolarPanel
+	title = #ICSP_SZ_SolarPanel_long_title // ShenZhou Service Module SolarPanel
+	manufacturer = #CNSA
+	description = #ICSP_SZ_SolarPanel_long_description // A pair of solar panels provide power to the Shenzhou Spacecraft. It is roughly 25m^2 and generate about 2400w of electricity.
+	tags = #ICSP_SZ_SolarPanel_long_tags // Shenzhou service Electric
 	attachRules = 1,0,1,1,0
 	mass = 0.1
 	dragModelType = default
@@ -30,13 +31,7 @@
 	thermalMassModifier = 2.0
 	emissiveConstant = 0.950
 	heatConductivity = 0.04 // 1/3 the default
-	// NODE
-    // {
-        // name = bottom
-        // transform = node_Bottom
-        // size = 1
-        // method = FIXED_JOINT
-    // }
+	
 	MODULE
 	{
 		name = ModuleDeployableSolarPanel
