Tiangong Localization File

--- a/Localization/en_us.cfg
+++ b/Localization/en_us.cfg
@@ -18,17 +18,17 @@ Localization
 		// ********** Part: SZ_HeatShield
 		#ICSP_SZ_DockingPort_title = Shenzhou Heat Shield
 		#ICSP_SZ_DockingPort_description = The Heat Shield protects the Re-entry capsule during the flamy re-entry. It is jettisoned after the main chute deployment to expose the retro-rocket. Note: The heat shield on Shenzhou is only rated for LEO re-entry!
-		#ICSP_SZ_DockingPort_tags = Shenzhou thermal re-entry
+		#ICSP_SZ_DockingPort_tags = Shenzhou Thermal Re-entry
 
 		// ********** Part: ICSP_SZ_MainParachute
 		#ICSP_SZ_MainParachute_title = ShenZhou Main Parachute System
 		#ICSP_SZ_MainParachute_description = The main chute system on the Shenzhou Re-entry Capsule is used during standard landing. The Drogue chute slows down the capsule enough so it can then deploy the main chute. Note: RealChute is required for this part to function properly. 
-		#ICSP_SZ_MainParachute_tags = Shenzhou chute re-entry main
+		#ICSP_SZ_MainParachute_tags = Shenzhou Chute Re-entry Main
 
 		// ********** Part: ICSP_SZ_SpareParachute
 		#ICSP_SZ_SpareParachute_title = ShenZhou Backup Parachute System
 		#ICSP_SZ_SpareParachute_description = The backup chute system on the Shenzhou Re-entry Capsule is used in the event of an abort or main parachute failure. The Drogue chute slows down the capsule enough so it can then deploy the main chute. Note: RealChute is required for this part to function properly. 
-		#ICSP_SZ_SpareParachute_tags = Shenzhou chute re-entry backup
+		#ICSP_SZ_SpareParachute_tags = Shenzhou Chute Re-entry Backup
 
 		// ********** Part: ICSP_SZ_OrbitalModule
 		#ICSP_SZ_OrbitalModule_title = ShenZhou Orbital Module
@@ -38,22 +38,52 @@ Localization
 		// ********** Part: ICSP_SZ_Re_entryModule
 		#ICSP_SZ_OrbitalModule_title = ShenZhou Re-entry Capsule
 		#ICSP_SZ_OrbitalModule_description = The Re-entry Capsule is occupied by astronuats during launch, landing and docking. It is protected by the Heat Shield during re-entry. After the flamy re-entry, it is slowed down by the drogue parachute, followed by the main parachute. At one meter above the ground, the retro-rocket is fired to give a soft landing(This process is best executed by Comfortable Landing). In the event of a water landing, a airbag is deployed to help the capsule afloat. 
-		#ICSP_SZ_OrbitalModule_tags = Shenzhou re-entry
+		#ICSP_SZ_OrbitalModule_tags = Shenzhou Re-entry
 
 		// ********** Part: ICSP_SZ_RM_CMUmblilcal
 		#ICSP_SZ_RM_CMUmblilcale_title = ShenZhou RC/SM Umblilcal
 		#ICSP_SZ_RM_CMUmblilcal_description = The Umblilcal line connects the Re-entry Capsule and the Service module to transfer Electricity and resources. It also acts as a separator to detach the RC and SM.
-		#ICSP_SZ_RM_CMUmblilcal_tags = Shenzhou re-entry service Coupling
+		#ICSP_SZ_RM_CMUmblilcal_tags = Shenzhou Re-entry Service Coupling
 
 		// ********** Part: ICSP_SZ_SolarPanel_long
 		#ICSP_SZ_SolarPanel_long_title = ShenZhou Service Module SolarPanel
 		#ICSP_SZ_SolarPanel_long_description = A pair of solar panels provide power to the Shenzhou Spacecraft. It is roughly 25m^2 and generate about 2400w of electricity.
-		#ICSP_SZ_SolarPanel_long_tags = Shenzhou service Electric
+		#ICSP_SZ_SolarPanel_long_tags = Shenzhou Service Electric
 
 		// ********** Part: ICSP_SZ_ServiceModule
 		#ICSP_SZ_ServiceModule_title = ShenZhou Service Module
 		#ICSP_SZ_ServiceModule_description = The Service Module, also known as the Instrument Module or Equipment Module, is used to install the Propulsion system, Electrical system and Attitude Control System. It also provides oxygen and water to the astronauts. Inside it are the engines and propellants of the propulsion system, which provide the power needed to adjust the attitude and orbit of the spacecraft.
 		#ICSP_SZ_ServiceModule_tags = Shenzhou Service
+
+		// ********** Part: ICSP_TG_Antenna
+		#ICSP_TG_Antenna_title = TianGong High Gain Antenna
+		#ICSP_TG_Antenna_description = It provides radio communication with the ground or other vessels for the Tiangong Space Lab.
+		#ICSP_TG_Antenna_tags = Tiangong Antenna Comms
+
+		// ********** Part: ICSP_TG_DockingPort
+		#ICSP_TG_DockingPort_title = TianGong Docking Port
+		#ICSP_TG_DockingPort_description = TianGong Docking Port is used to connect Tiangong Space Lab with other Chinese spacecraft. It is compatible with Shenzhou Docking Port, Tianzhou Docking Port and Chinsese Universal Docking Port.
+		#ICSP_TG_DockingPort_tags = Tiangong Docking
+
+		// ********** Part: ICSP_TG_LaboratoryModule
+		#ICSP_TG_LaboratoryModule_title = TianGong Laboratory Module
+		#ICSP_TG_LaboratoryModule_description = The Laboratory Module provides space for astronauts to live and do science onboard the Tiangong Space Lab.
+		#ICSP_TG_LaboratoryModule_tags = Tiangong
+
+		// ********** Part: ICSP_TG_MainEngine
+		#ICSP_TG_MainEngine_title = TianGong Main Engine
+		#ICSP_TG_MainEngine_description = Burning some highly toxic but easy-to-store propellant, it provides propulsion for the Tiangong Space Lab.
+		#ICSP_TG_MainEngine_tags = Tiangong engine
+
+		// ********** Part: ICSP_TG_ServiceModule
+		#ICSP_TG_ServiceModule_title = TianGong Service Module
+		#ICSP_TG_ServiceModule_description = The Service Module provides power, propulsion and attitude control for the Tiangong Space Lab.
+		#ICSP_TG_ServiceModule_tags = Tiangong Service
+
+		// ********** Part: ICSP_TG_SolarPanel
+		#ICSP_TG_SolarPanel_title = TianGong SolarPanel
+		#ICSP_TG_SolarPanel_description = A pair of solar panels provide power to the Tiangong Space Lab. It is roughly 36m^2 and generate about 3600w of electricity.
+		#ICSP_TG_SolarPanel_tags = Tiangong Service Electric
 
 	}
 }
