--- a/TianGong/Part/LaboratoryModule.cfg
+++ b/TianGong/Part/LaboratoryModule.cfg
@@ -17,9 +17,10 @@
 	cost = 4000
 	category = Pods
 	subcategory = 0
-	title = TianGong Laboratory Module
-	manufacturer = Icecovery
-	description = TianGong Laboratory Module
+	title = #ICSP_TG_LaboratoryModule_title // TianGong Laboratory Module
+	manufacturer = #CNSA
+	description = #ICSP_TG_LaboratoryModule_description // The Laboratory Module provides space for astronauts to live and do science on board the Tiangong space lab.
+	tags = #ICSP_TG_LaboratoryModule_tags // Tiangong
 	attachRules = 1,0,1,1,0
 	mass = 5
 	
