--- a/TianGong/Part/ServiceModule.cfg
+++ b/TianGong/Part/ServiceModule.cfg
@@ -19,9 +19,10 @@
 	cost = 1300
 	category = Control
 	subcategory = 0
-	title = TianGong Service Module
-	manufacturer = Icecovery
-	description = TianGong Service Module
+	title = #ICSP_TG_ServiceModule_title // TianGong Service Module
+	manufacturer = #CNSA
+	description = #ICSP_TG_ServiceModule_description // The Service Module provides power, propulsion and attitude control for the Space Lab.
+	tags = #ICSP_TG_ServiceModule_tags // Tiangong Service
 	attachRules = 1,1,1,1,0
 	mass = 1.0
 	dragModelType = default
@@ -31,41 +32,7 @@
 	crashTolerance = 12
 	maxTemp = 1500
 	bulkheadProfiles = size2
-	// NODE
-    // {
-        // name = top
-        // transform = node_Top
-        // size = 2
-        // method = FIXED_JOINT
-    // }
-	// NODE
-    // {
-        // name = bottom
-        // transform = node_Bottom
-        // size = 2
-        // method = FIXED_JOINT
-    // }
-	// NODE
-    // {
-        // name = antenna
-        // transform = node_antenna
-        // size = 1
-        // method = FIXED_JOINT
-    // }
-	// NODE
-    // {
-        // name = panela
-        // transform = node_panela
-        // size = 1
-        // method = FIXED_JOINT
-    // }
-	// NODE
-    // {
-        // name = panelb
-        // transform = node_panelb
-        // size = 1
-        // method = FIXED_JOINT
-    // }
+
 	RESOURCE
 	{
 		name = MonoPropellant
