--- a/TianGong/Part/SolarPanel.cfg
+++ b/TianGong/Part/SolarPanel.cfg
@@ -15,9 +15,10 @@
 	cost = 380
 	category = Electrical
 	subcategory = 0
-	title = TianGong SolarPanel
-	manufacturer = Icecovery
-	description = TianGong SolarPanel
+	title = #ICSP_TG_SolarPanel_title // TianGong SolarPanel
+	manufacturer = #CNSA
+	description = #ICSP_TG_SolarPanel_description // A pair of solar panels provide power to the Tiangong Space Lab. It is roughly 36m^2 and generate about 3600w of electricity.
+	tags = #ICSP_TG_SolarPanel_tags // Tiangong Service Electric
 	attachRules = 1,0,1,1,0
 	mass = 0.1
 	dragModelType = default
@@ -30,13 +31,7 @@
 	thermalMassModifier = 2.0
 	emissiveConstant = 0.95
 	heatConductivity = 0.04 // 1/3 the default
-	// NODE
-    // {
-        // name = bottom
-        // transform = node_Bottom
-        // size = 1
-        // method = FIXED_JOINT
-    // }
+
 	MODULE
 	{
 		name = ModuleDeployableSolarPanel
