--- a/TianGong/Part/DockingPort.cfg
+++ b/TianGong/Part/DockingPort.cfg
@@ -17,9 +17,10 @@
 	cost = 280
 	category = Coupling
 	subcategory = 0
-	title = TianGong Docking Port
-	manufacturer = Icecovery
-	description = TianGong Docking Port
+	title = #ICSP_TG_DockingPort_title // TianGong Docking Port
+	manufacturer = #CNSA
+	description = #ICSP_TG_DockingPort_description // TianGong Docking Port is used to connect Tiangong Space Lab with other Chinese spacecraft. It is compatible with Shenzhou Docking Port, Tianzhou Docking Port and Chinsese Universal Docking Port.
+	tags = #ICSP_TG_DockingPort_tags // Tiangong Docking Orbital
 	attachRules = 1,1,1,1,0
 	mass = 0.1
 	dragModelType = default
@@ -30,20 +31,7 @@
 	maxTemp = 1500
 	bulkheadProfiles = size1, srf
 	stagingIcon = DECOUPLER_VERT
-	// NODE
-    // {
-        // name = top
-        // transform = node_Top
-        // size = 2
-        // method = FIXED_JOINT
-    // }
-	// NODE
-    // {
-        // name = bottom
-        // transform = node_Bottom
-        // size = 2
-        // method = FIXED_JOINT
-    // }
+
 	MODULE
 	{
 		name = ModuleDockingNode
