Tianzhou Localization File

--- a/Localization/en_us.cfg
+++ b/Localization/en_us.cfg
@@ -12,7 +12,7 @@ Localization
 		// ------------------Shenzhou--------------------------
 		// ********** Part: ICSP_SZ_DockingPort
 		#ICSP_SZ_DockingPort_title = Shenzhou Docking Port
-		#ICSP_SZ_DockingPort_description = Shenzhou Docking Port is used to connect Shenzhou with Tiangong Station. It is compatible with Tiangong Docking Port and Chinsese Universal Docking Port.
+		#ICSP_SZ_DockingPort_description = Shenzhou Docking Port is used to dock Shenzhou with other spacecraft. It is compatible with Tiangong Docking Port and Chinsese Universal Docking Port.
 		#ICSP_SZ_DockingPort_tags = Shenzhou Docking Orbital
 
 		// ********** Part: SZ_HeatShield
@@ -55,6 +55,7 @@ Localization
 		#ICSP_SZ_ServiceModule_description = The Service Module, also known as the Instrument Module or Equipment Module, is used to install the Propulsion system, Electrical system and Attitude Control System. It also provides oxygen and water to the astronauts. Inside it are the engines and propellants of the propulsion system, which provide the power needed to adjust the attitude and orbit of the spacecraft.
 		#ICSP_SZ_ServiceModule_tags = Shenzhou Service
 
+		// ------------------Tiangong--------------------------
 		// ********** Part: ICSP_TG_Antenna
 		#ICSP_TG_Antenna_title = TianGong High Gain Antenna
 		#ICSP_TG_Antenna_description = It provides radio communication with the ground or other vessels for the Tiangong Space Lab.
@@ -62,7 +63,7 @@ Localization
 
 		// ********** Part: ICSP_TG_DockingPort
 		#ICSP_TG_DockingPort_title = TianGong Docking Port
-		#ICSP_TG_DockingPort_description = TianGong Docking Port is used to connect Tiangong Space Lab with other Chinese spacecraft. It is compatible with Shenzhou Docking Port, Tianzhou Docking Port and Chinsese Universal Docking Port.
+		#ICSP_TG_DockingPort_description = TianGong Docking Port is used to dock Tiangong Space Lab with other Chinese spacecraft. It is compatible with Shenzhou Docking Port, Tianzhou Docking Port and Chinsese Universal Docking Port.
 		#ICSP_TG_DockingPort_tags = Tiangong Docking
 
 		// ********** Part: ICSP_TG_LaboratoryModule
@@ -84,6 +85,37 @@ Localization
 		#ICSP_TG_SolarPanel_title = TianGong SolarPanel
 		#ICSP_TG_SolarPanel_description = A pair of solar panels provide power to the Tiangong Space Lab. It is roughly 36m^2 and generate about 3600w of electricity.
 		#ICSP_TG_SolarPanel_tags = Tiangong Service Electric
+
+		// ------------------Tianzhou--------------------------
+		// ********** Part: ICSP_TZ_Antenna
+		#ICSP_TZ_Antenna_title = TianZhou High Gain Antenna
+		#ICSP_TZ_Antenna_description = It provides radio communication with the ground or other vessels for the TianZhou Cargo Ship.
+		#ICSP_TZ_Antenna_tags = Tianzhou Antenna Comms
+
+		// ********** Part: ICSP_TZ_CargoModule
+		#ICSP_TZ_CargoModule_title = TianZhou Cargo Module
+		#ICSP_TZ_CargoModule_description = The Tianzhou Cargo Ship is designed to Resupply the Chinese Space Station with Life Support, Cargo and Propellant. The Cargo Module can hold up to 15m^3 or 6500kg of cargo. It is also intergrated with RCS for attitude control and translation.
+		#ICSP_TZ_CargoModule_tags = Tianzhou Payload Cargo
+
+		// ********** Part: ICSP_TZ_DockingPort
+		#ICSP_TZ_DockingPort_title = TianZhou Docking Port
+		#ICSP_TZ_DockingPort_description = TianZhou Docking Port is used to dock TianZhou with other Chinese spacecraft. It is compatible with Shenzhou Docking Port, Tiangong Docking Port and Chinsese Universal Docking Port.
+		#ICSP_TZ_DockingPort_tags = Tianzhou Docking
+
+		// ********** Part: ICSP_TZ_MainEngine
+		#ICSP_TZ_MainEngine_title = TianZhou Main Engine
+		#ICSP_TZ_MainEngine_description = Burning some highly toxic but easy-to-store propellant, it provides propulsion for the Tianzhou Cargo Ship.
+		#ICSP_TZ_MainEngine_tags = Tianzhou engine
+
+		// ********** Part: ICSP_TZ_ServiceModule
+		#ICSP_TZ_ServiceModule_title = TianZhou Service Module
+		#ICSP_TZ_ServiceModule_description = The Service Module provides power, propulsion and attitude control for the Tianzhou Cargo Ship.
+		#ICSP_TZ_ServiceModule_tags = Tianzhou Service
+
+		// ********** Part: ICSP_TZ_SolarPanel
+		#ICSP_TZ_SolarPanel_title = TianZhou SolarPanel
+		#ICSP_TZ_SolarPanel_description = A pair of solar panels provide power to the Tianzhou Cargo Ship.. It is roughly 27m^2 and generate about 2700w of electricity.
+		#ICSP_TZ_SolarPanel_tags = Tianzhou Service Electric
 
 	}
 }
