--- a/TianZhou/Part/MainEngine.cfg
+++ b/TianZhou/Part/MainEngine.cfg
@@ -16,9 +16,10 @@ PART
 	cost = 400
 	category = Engine
 	subcategory = 0
-	title = TianZhou Main Engine
-	manufacturer = Icecovery
-	description = TianZhou Main Engine
+	title = #ICSP_TZ_MainEngine_title // TianZhou Main Engine
+	manufacturer = #CNSA
+	description = #ICSP_TZ_MainEngine_description // Burning some highly toxic but easy-to-store propellant, it provides propulsion for the Tianzhou Cargo Ship.
+	tags = #ICSP_TZ_MainEngine_tags // Tianzhou engine
 	attachRules = 1,0,1,1,0
 	mass = 0.35
 	heatConductivity = 0.06 // half default
@@ -33,20 +34,7 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000 // = 3600
 	bulkheadProfiles = srf
-	// NODE
-    // {
-        // name = top
-        // transform = node_Top
-        // size = 2
-        // method = FIXED_JOINT
-    // }
-	// NODE
-    // {
-        // name = bottom
-        // transform = node_Bottom
-        // size = 2
-        // method = FIXED_JOINT
-    // }
+
 	EFFECTS
 	{
 		running
