--- a/TianZhou/Part/Antenna.cfg
+++ b/TianZhou/Part/Antenna.cfg
@@ -14,9 +14,10 @@
 	cost = 600
 	category = Communication
 	subcategory = 0
-	title = TianZhou High Gain Antenna
-	manufacturer = Icecovery
-	description = TianZhou High Gain Antenna
+	title = #ICSP_TZ_Antenna_title // TianZhou High Gain Antenna
+	manufacturer = #CNSA
+	description = #ICSP_TZ_Antenna_description // It provides radio communication with the ground or other vessels for the TianZhou Cargo Ship.
+	tags = #ICSP_TZ_Antenna_tags // Tianzhou Antenna Comms
 	attachRules = 1,0,1,1,0
 	mass = 0.05
 	dragModelType = default
@@ -27,13 +28,7 @@
 	maxTemp = 1200 // = 3200
 	vesselType = Relay
 	bulkheadProfiles = srf
-	// NODE
-    // {
-        // name = bottom
-        // transform = node_Bottom
-        // size = 1
-        // method = FIXED_JOINT
-    // }
+
 	MODULE
 	{
 		name = ModuleDeployableAntenna
