--- a/TianZhou/Part/CargoModule.cfg
+++ b/TianZhou/Part/CargoModule.cfg
@@ -16,9 +16,10 @@
 	cost = 1300
 	category = Pods
 	subcategory = 0
-	title = TianZhou Cargo Module
-	manufacturer = Icecovery
-	description = TianZhou Cargo Module
+	title = #ICSP_TZ_CargoModule_title // TianZhou Cargo Module
+	manufacturer = #CNSA
+	description = #ICSP_TZ_CargoModule_description // The Tianzhou Cargo Ship is designed to Resupply the Chinese Space Station with Life Support, Cargo and Propellant. The Cargo Module can hold up to 15m^3 or 6500kg of cargo. It is also intergrated with RCS for attitude control and translation.
+	tags = #ICSP_TZ_CargoModule_tags // Tianzhou Payload Cargo
 	attachRules = 1,0,1,1,0
 	mass = 2
 	dragModelType = default
@@ -29,20 +30,7 @@
 	maxTemp = 1500
 	bulkheadProfiles = size2
 	vesselType = Ship
-	// NODE
-    // {
-        // name = top
-        // transform = node_Top
-        // size = 2
-        // method = FIXED_JOINT
-    // }
-	// NODE
-    // {
-        // name = bottom
-        // transform = node_Bottom
-        // size = 2
-        // method = FIXED_JOINT
-    // }
+
 	MODULE
 	{
 		name = FlagDecal
