--- a/TianZhou/Part/DockingPort.cfg
+++ b/TianZhou/Part/DockingPort.cfg
@@ -17,9 +17,10 @@
 	cost = 280
 	category = Coupling
 	subcategory = 0
-	title = TianZhou Docking Port
-	manufacturer = Icecovery
-	description = TianZhou Docking Port
+	title = #ICSP_TZ_DockingPort_title // TianZhou Docking Port
+	manufacturer = #CNSA
+	description = #ICSP_TZ_DockingPort_description // TianZhou Docking Port is used to dock TianZhou with other Chinese spacecraft. It is compatible with Shenzhou Docking Port, Tiangong Docking Port and Chinsese Universal Docking Port.
+	tags = #ICSP_TZ_DockingPort_tags // Tianzhou Docking
 	attachRules = 1,1,1,1,0
 	mass = 0.1
 	dragModelType = default
@@ -30,20 +31,7 @@
 	maxTemp = 1500
 	bulkheadProfiles = size1, srf
 	stagingIcon = DECOUPLER_VERT
-	// NODE
-    // {
-        // name = top
-        // transform = node_Top
-        // size = 2
-        // method = FIXED_JOINT
-    // }
-	// NODE
-    // {
-        // name = bottom
-        // transform = node_Bottom
-        // size = 2
-        // method = FIXED_JOINT
-    // }
+
 	MODULE
 	{
 		name = ModuleDockingNode
