--- a/TianZhou/Part/SolarPanel.cfg
+++ b/TianZhou/Part/SolarPanel.cfg
@@ -15,9 +15,10 @@
 	cost = 380
 	category = Electrical
 	subcategory = 0
-	title = TianZhou SolarPanel
-	manufacturer = Icecovery
-	description = TianZhou SolarPanel
+	title = #ICSP_TZ_SolarPanel_title // TianZhou SolarPanel
+	manufacturer = #CNSA
+	description = #ICSP_TZ_SolarPanel_description // A pair of solar panels provide power to the Tianzhou Cargo Ship.. It is roughly 27m^2 and generate about 2700w of electricity.
+	tags = #ICSP_TZ_SolarPanel_tags // Tianzhou Service Electric
 	attachRules = 1,0,1,1,0
 	mass = 0.08
 	dragModelType = default
@@ -30,13 +31,7 @@
 	thermalMassModifier = 2.0
 	emissiveConstant = 0.95
 	heatConductivity = 0.04 // 1/3 the default
-	// NODE
-    // {
-        // name = bottom
-        // transform = node_Bottom
-        // size = 1
-        // method = FIXED_JOINT
-    // }
+
 	MODULE
 	{
 		name = ModuleDeployableSolarPanel
