Tianhe Localization File

--- a/Localization/en_us.cfg
+++ b/Localization/en_us.cfg
@@ -47,7 +47,7 @@ Localization
 
 		// ********** Part: ICSP_SZ_SolarPanel_long
 		#ICSP_SZ_SolarPanel_long_title = ShenZhou Service Module SolarPanel
-		#ICSP_SZ_SolarPanel_long_description = A pair of solar panels provide power to the Shenzhou Spacecraft. It is roughly 25m^2 and generate about 2400w of electricity.
+		#ICSP_SZ_SolarPanel_long_description = A pair of solar panels provide power to the Shenzhou Spacecraft. A single Panel is roughly 12.5m^2 and generate about 1200w of electricity.
 		#ICSP_SZ_SolarPanel_long_tags = Shenzhou Service Electric
 
 		// ********** Part: ICSP_SZ_ServiceModule
@@ -82,8 +82,8 @@ Localization
 		#ICSP_TG_ServiceModule_tags = Tiangong Service
 
 		// ********** Part: ICSP_TG_SolarPanel
-		#ICSP_TG_SolarPanel_title = TianGong SolarPanel
-		#ICSP_TG_SolarPanel_description = A pair of solar panels provide power to the Tiangong Space Lab. It is roughly 36m^2 and generate about 3600w of electricity.
+		#ICSP_TG_SolarPanel_title = TianGong Solar Panel
+		#ICSP_TG_SolarPanel_description = A pair of solar panels provide power to the Tiangong Space Lab. A single Panel is roughly 18m^2 and generate about 1800w of electricity.
 		#ICSP_TG_SolarPanel_tags = Tiangong Service Electric
 
 		// ------------------Tianzhou--------------------------
@@ -113,9 +113,40 @@ Localization
 		#ICSP_TZ_ServiceModule_tags = Tianzhou Service
 
 		// ********** Part: ICSP_TZ_SolarPanel
-		#ICSP_TZ_SolarPanel_title = TianZhou SolarPanel
-		#ICSP_TZ_SolarPanel_description = A pair of solar panels provide power to the Tianzhou Cargo Ship.. It is roughly 27m^2 and generate about 2700w of electricity.
+		#ICSP_TZ_SolarPanel_title = TianZhou Solar Panel
+		#ICSP_TZ_SolarPanel_description = A pair of solar panels provide power to the Tianzhou Cargo Ship.. A single Panel is roughly 13.5m^2 and generate about 1350w of electricity.
 		#ICSP_TZ_SolarPanel_tags = Tianzhou Service Electric
+
+		// ------------------TianHe--------------------------
+		// ********** Part: ICSP_TH_Antenna
+		#ICSP_TH_Antenna_title = TianHe High Gain Antenna
+		#ICSP_TH_Antenna_description = It provides radio communication with the ground or other vessels for the Tianhe Core Module.
+		#ICSP_TH_Antenna_tags = TianHe Antenna Comms
+
+		// ********** Part: ICSP_TH_ConnectingModule
+		#ICSP_TH_ConnectingModule_title = TianHe Docking Hub
+		#ICSP_TH_ConnectingModule_description = The TianHe Docking Hub have 4 docking node. The left and right docking port are reserved for Mengtian Lab Module and Wentian Lab Module, the forward and nadir docking port are used by either Shenzhou Spacecraft or Tianzhou Cargo Ship. It can also act as an Airlock for EVAs during the building stage of the Chinese Space Station. Later EVAs can depart from the airlock onboard Wentian Module.
+		#ICSP_TH_ConnectingModule_tags = TianHe Connect Construct EVA
+
+		// ********** Part: ICSP_ChinseseUniversalDockingPort
+		#ICSP_ChinseseUniversalDockingPort_title = Chinsese Universal Docking Port
+		#ICSP_ChinseseUniversalDockingPort_description = Chinsese Universal Docking Port is used by Chinese spacecrafts to dock with each other. It is compatible with Shenzhou Docking Port, Tiangong Docking Port and Tianzhou Docking Port.
+		#ICSP_ChinseseUniversalDockingPort_tags = Tianhe Docking
+
+		// ********** Part: ICSP_TH_MultipurposeModule
+		#ICSP_TH_MultipurposeModule_title = TianHe Habitable Living Quarter
+		#ICSP_TH_MultipurposeModule_description = The Habitable Living Quarter is where the Astronauts enjoy their time in space. It includes a kitchen, a toilet, fire control equipment, air processing and control equipment, computers, scientific apparatus, and ground communications equipment. 
+		#ICSP_TH_MultipurposeModule_tags = Tianhe Crew
+
+		// ********** Part: ICSP_TH_ServiceModule
+		#ICSP_TH_ServiceModule_title = TianHe Aft Section
+		#ICSP_TH_ServiceModule_description = The Aft Section is consist of a crew cabin and a service module. The cabin provides more space for astronauts to live and work in space. And the service module provides Attitude Control, Propulsion, Electric Power and Life Support Capability. Tianhe Core Module uses Hall-effect thrusters to perform orbit raising. The Aft Section also have a docking port at the end of the Section which can be used by Tianzhou Cargo Ship. 
+		#ICSP_TH_ServiceModule_tags = Tianhe Crew Service 
+
+		// ********** Part: ICSP_TH_SolarPanel
+		#ICSP_TH_SolarPanel_title = TianHe Solar Array
+		#ICSP_TH_SolarPanel_description = A pair of solar arrays provide power to the Tianhe Core Module. The roll-out solar array is very efficient while been very light. It is roughly 67m^2 and generate about 9000w of electricity.
+		#ICSP_TH_SolarPanel_tags = TianHe Service Electric
 
 	}
 }
