--- a/TianHe/Part/ConnectingModule.cfg
+++ b/TianHe/Part/ConnectingModule.cfg
@@ -15,9 +15,10 @@
 	cost = 4000
 	category = Utility
 	subcategory = 0
-	title = TianHe Connecting Module
-	manufacturer = Icecovery
-	description = TianHe Connecting Module
+	title = #ICSP_TH_ConnectingModule_title // TianHe Docking Hub
+	manufacturer = #CNSA
+	description = #ICSP_TH_ConnectingModule_description // The TianHe Docking Hub have 4 docking node. The left and right docking port are reserved for Mengtian Lab Module and Wentian Lab Module, the forward and nadir docking port are used by either Shenzhou Spacecraft or Tianzhou Cargo Ship. It can also act as an Airlock for EVAs during the building stage of the Chinese Space Station. Later EVAs can depart from the airlock onboard Wentian Module.
+	tags = #ICSP_TH_ConnectingModule_tags // TianHe Connect Construct EVA
 	attachRules = 1,0,1,1,0
 	mass = 2.5
 	dragModelType = default
@@ -29,7 +30,7 @@
 	breakingTorque = 200
 	maxTemp = 1000
 	skinMaxTemp = 2000
-	vesselType = Ship
+	vesselType = Station
 	MODEL
 	{
 		model = ICSP/TianHe/Part/ConnectingModule
