--- a/TianHe/Part/DockingPort.cfg
+++ b/TianHe/Part/DockingPort.cfg
@@ -11,9 +11,10 @@
 	cost = 280
 	category = Coupling
 	subcategory = 0
-	title = Chinsese Universal Docking Port
-	manufacturer = Icecovery
-	description = Chinsese Universal Docking Port
+	title = #ICSP_ChinseseUniversalDockingPort_title // Chinsese Universal Docking Port
+	manufacturer = #CNSA
+	description = #ICSP_ChinseseUniversalDockingPort_description // Chinsese Universal Docking Port is used by Chinese spacecrafts to dock with each other. It is compatible with Shenzhou Docking Port, Tiangong Docking Port and Tianzhou Docking Port.
+	tags = #ICSP_ChinseseUniversalDockingPort_tags // Tianhe Docking
 	attachRules = 1,1,1,1,0
 	mass = 0.15
 	dragModelType = default
