--- a/TianHe/Part/MultipurposeModule.cfg
+++ b/TianHe/Part/MultipurposeModule.cfg
@@ -14,11 +14,12 @@
 	TechRequired = advExploration
 	entryCost = 12400
 	cost = 4000
-	category = Utility
+	category = Pods
 	subcategory = 0
-	title = TianHe Multipurpose Module
-	manufacturer = Icecovery
-	description = TianHe Multipurpose Module
+	title = #ICSP_TH_MultipurposeModule_title // TianHe Habitable Living Quarter
+	manufacturer = #CNSA
+	description = #ICSP_TH_MultipurposeModule_description // The Habitable Living Quarter is where the Astronauts enjoy their time in space. It includes a kitchen, a toilet, fire control equipment, air processing and control equipment, computers, scientific apparatus, and ground communications equipment. 
+	tags = #ICSP_TH_MultipurposeModule_tags // Tianhe Crew
 	attachRules = 1,0,1,1,0
 	mass = 4
 	dragModelType = default
@@ -30,7 +31,7 @@
 	breakingTorque = 200
 	maxTemp = 1000
 	skinMaxTemp = 2000
-	vesselType = Ship
+	vesselType = Station
 	MODEL
 	{
 		model = ICSP/TianHe/Part/MultipurposeModule
