--- a/TianHe/Part/ServiceModule.cfg
+++ b/TianHe/Part/ServiceModule.cfg
@@ -12,9 +12,10 @@
 	cost = 4000
 	category = Utility
 	subcategory = 0
-	title = TianHe Service Module
-	manufacturer = Icecovery
-	description = TianHe Service Module
+	title = #ICSP_TH_ServiceModule_title // TianHe Aft Section
+	manufacturer = #CNSA
+	description = #ICSP_TH_ServiceModule_description // The Aft Section is consist of a crew cabin and a service module. The cabin provides more space for astronauts to live and work in space. And the service module provides Attitude Control, Propulsion, Electric Power and Life Support Capability. Tianhe Core Module uses Hall-effect thrusters to perform orbit raising. The Aft Section also have a docking port at the end of the Section which can be used by Tianzhou Cargo Ship. 
+	tags= #ICSP_TH_ServiceModule_tags // Tianhe Crew Service 
 	attachRules = 1,0,1,1,0
 	mass = 10
 	dragModelType = default
@@ -26,7 +27,7 @@
 	breakingTorque = 200
 	maxTemp = 1000
 	skinMaxTemp = 2000
-	vesselType = Ship
+	vesselType = Station
 	stagingIcon = COMMAND_POD
 	MODEL
 	{
