--- a/TianHe/Part/SolarPanel.cfg
+++ b/TianHe/Part/SolarPanel.cfg
@@ -10,11 +10,12 @@
 	cost = 380
 	category = Electrical
 	subcategory = 0
-	title = TianHe SolarPanel
-	manufacturer = Icecovery
-	description = TianHe SolarPanel
+	title = #ICSP_TH_SolarPanel_title // TianHe Solar Array
+	manufacturer = #CNSA
+	description = #ICSP_TH_SolarPanel_description // A pair of solar arrays provide power to the Tianhe Core Module. The roll-out solar array is very efficient while been very light. It is roughly 67m^2 and generate about 9000w of electricity.
+	tags = #ICSP_TH_SolarPanel_tags // TianHe Service Electric
 	attachRules = 1,0,1,1,0
-	mass = 0.5
+	mass = 0.2
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -34,7 +35,7 @@
 	{
 		name = ModuleDeployableSolarPanel
 		resourceName = ElectricCharge
-		chargeRate = 35
+		chargeRate = 90
 		animationName = TH_SolarPanel_open
 		secondaryTransformName = arm
 		extendActionName = Extend
