--- a/TianHe/Part/Antenna.cfg
+++ b/TianHe/Part/Antenna.cfg
@@ -10,9 +10,10 @@
 	cost = 600
 	category = Communication
 	subcategory = 0
-	title = TianHe High Gain Antenna
-	manufacturer = Icecovery
-	description = TianHe High Gain Antenna
+	title = #ICSP_TH_Antenna_title // TianHe High Gain Antenna
+	manufacturer = #CNSA
+	description = #ICSP_TH_Antenna_description // It provides radio communication with the ground or other vessels for the Tianhe Core Module.
+	tags = #ICSP_TH_Antenna_tags // TianHe Antenna Comms
 	attachRules = 1,0,1,1,0
 	mass = 0.05
 	dragModelType = default
