中文本土化、原版尺寸

--- a/ICSP/Localization/en_us.cfg
+++ b/ICSP/Localization/en_us.cfg
@@ -36,13 +36,13 @@ Localization
 		#ICSP_SZ_OrbitalModule_tags = Shenzhou Orbital
 
 		// ********** Part: ICSP_SZ_Re_entryModule
-		#ICSP_SZ_OrbitalModule_title = ShenZhou Re-entry Capsule
-		#ICSP_SZ_OrbitalModule_description = The Re-entry Capsule is occupied by astronuats during launch, landing and docking. It is protected by the Heat Shield during re-entry. After the flamy re-entry, it is slowed down by the drogue parachute, followed by the main parachute. At one meter above the ground, the retro-rocket is fired to give a soft landing(This process is best executed by Comfortable Landing). In the event of a water landing, a airbag is deployed to help the capsule afloat. 
-		#ICSP_SZ_OrbitalModule_tags = Shenzhou Re-entry
+		#ICSP_SZ_Re_entryModule_title = ShenZhou Re-entry Capsule
+		#ICSP_SZ_Re_entryModule_description = The Re-entry Capsule is occupied by astronuats during launch, landing and docking. It is protected by the Heat Shield during re-entry. After the flamy re-entry, it is slowed down by the drogue parachute, followed by the main parachute. At one meter above the ground, the retro-rocket is fired to give a soft landing(This process is best executed by Comfortable Landing). In the event of a water landing, a airbag is deployed to help the capsule afloat. 
+		#ICSP_SZ_Re_entryModule_tags = Shenzhou Re-entry
 
 		// ********** Part: ICSP_SZ_RM_CMUmblilcal
-		#ICSP_SZ_RM_CMUmblilcale_title = ShenZhou RC/SM Umblilcal
-		#ICSP_SZ_RM_CMUmblilcal_description = The Umblilcal line connects the Re-entry Capsule and the Service module to transfer Electricity and resources. It also acts as a separator to detach the RC and SM.
+		#ICSP_SZ_RM_CMUmblilcale_title = ShenZhou RC/SM Umbilical
+		#ICSP_SZ_RM_CMUmblilcal_description = The Umbilical line connects the Re-entry Capsule and the Service module to transfer Electricity and resources. It also acts as a separator to detach the RC and SM.
 		#ICSP_SZ_RM_CMUmblilcal_tags = Shenzhou Re-entry Service Coupling
 
 		// ********** Part: ICSP_SZ_SolarPanel_long
